# 3d_foot_reconstruction_demo

./: .gitignore  README.md  REAEME.md  cnn_models.py  data_process.py  demo_3D-RecGAN++.py  main.py  model_config.py  networks.py  online_demo.py  ops.py  poisson_reconstruction_256.mlx  real_data.json  requirements.txt  template.binvox  utils.py
data_collector/: CMakeLists.txt
data_collector/src/: data_process.cpp  data_process.h  data_read.cpp  data_read.h  main.cpp
